--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -15,7 +15,7 @@ $blockquote-text-color: #819198 !default;
 
 // Code
 $code-bg-color: #222324 !default;
-$code-text-color: #567482 !default;
+$code-text-color: #fff !default;
 
 // Borders
 $border-color: #dce6f0 !default;
