--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -8,8 +8,8 @@ $header-bg-color: #323333 !default;
 $header-bg-color-secondary: #262626 !default;
 
 // Text
-$section-headings-color: #159957 !default;
-$body-text-color: #606c71 !default;
+$section-headings-color: #fff !default;
+$body-text-color: #d2d7d9 !default;
 $body-link-color: #1e6bb8 !default;
 $blockquote-text-color: #819198 !default;
 
@@ -18,6 +18,6 @@ $code-bg-color: #222324 !default;
 $code-text-color: #fff !default;
 
 // Borders
-$border-color: #dce6f0 !default;
+$border-color: #222324 !default;
 $table-border-color: #e9ebec !default;
 $hr-border-color: #eff0f1 !default;
