--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -19,5 +19,5 @@ $code-text-color: #fff !default;
 
 // Borders
 $border-color: #222324 !default;
-$table-border-color: #e9ebec !default;
-$hr-border-color: #eff0f1 !default;
+$table-border-color: #222324 !default;
+$hr-border-color: #222324 !default;
