--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -10,8 +10,8 @@ $header-bg-color-secondary: #262626 !default;
 // Text
 $section-headings-color: #fff !default;
 $body-text-color: #d2d7d9 !default;
-$body-link-color: #1e6bb8 !default;
-$blockquote-text-color: #819198 !default;
+$body-link-color: #81aee6 !default;
+$blockquote-text-color: #999999 !default;
 
 // Code
 $code-bg-color: #222324 !default;
