--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -185,10 +185,10 @@ a {
   
   kbd {
     background-color: #262626;
-    border: 1px solid #c6cbd1;
-    border-bottom-color: #959da5;
+    border: 1px solid #262626;
+    border-bottom-color: #262626;
     border-radius: 3px;
-    box-shadow: inset 0 -1px 0 #959da5;
+    box-shadow: inset 0 -1px 0 #1c1c1c;
     color: #444d56;
     display: inline-block;
     font-size: 11px;
