--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -252,7 +252,7 @@ a {
 
   .highlight {
     margin-bottom: 1rem;
-
+    border-radius: 0;
     pre {
       margin-bottom: 0;
       word-break: normal;
