--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,110 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 body{
-    background-color: black;
+    user-select: none;
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: 300;
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    margin: 0;
+    box-sizing: border-box;
+    background-color: #343434;
+    color: #F0F0F0;
+    align-items: center;
+    overflow: hidden;
+    word-wrap: break-word;
+    animation: fadeup 1.5s;
+    opacity: 100;
+    cursor: default;
 }
-h1{
-    color: white;
+.logo{
+    margin-top: 8rem;
+    font-size: 48px;
+    font-weight: 100;
+    letter-spacing: 5px;
+    animation: logoin 0.9s, logoidle 3.3s infinite;
+
+}
+.text{
+    margin-top: 4rem;
+}
+.buttons{
+    display: flex;
+    flex-direction: column;
+    margin-top: 3rem;
+    width: 240px;
+    height: 180px;
+
+}
+.button{
+    color: #F0F0F0;
+
+    text-decoration: none;
+    background-color: #2c2c2c;
+    position: relative;
+    margin: 0.4rem;
+    display: flex;
+    flex: 1;
+
+    border-radius: 12px;
+    box-shadow: 0 0 -1px #F0F0F0;
+    backface-visibility: hidden;
+    transition: all 0.4s;
+} .button:hover, .button:active{
+    cursor: pointer;
+    background-color: #2b2b2b;
+    box-shadow: 0 0 10px #F0F0F0;
+} 
+.button-icon{
+
+    display: flex;
+    position: absolute;
+    left: 0;
+    font-size: 26px;
+    width: 48px;
+    height: 100%;
+
+}
+
+.jat{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+@keyframes logoin {
+    from{
+        letter-spacing: -4px;
+    }
+    to{
+        letter-spacing: 5px;
+    }
+}
+@keyframes fadeup {
+    from{
+        opacity: 0;
+        transform: translateY(32px);
+    }
+    to{
+        opacity: 100;
+        transform: translateY(0px);
+    }
+}
+@keyframes logoidle {
+    0%{
+        text-shadow: 0 0 10px #F0F0F0;
+        color: #F0F0F0;
+        transform: translateY(12px);
+    }
+    50%{
+        text-shadow: 0 0 2px #F0F0F0;
+        color: #f0f0f0eb;
+        transform: translateY(0px);
+    }
+    100%{
+        text-shadow: 0 0 10px #F0F0F0;
+
+        color: #F0F0F0;
+        transform: translateY(12px);
+    }
 }
